@@ -1,6 +1,5 @@
 Keep track of tasks that you need to do in this file.
 
-- i18n is not working for control panel template (see ControlPanel.js)
 - apply Bootstrap to DOM controls
 - make it work with file:// (fails on Chrome)
 - grunt.js + package.json (documented)
